# 2026_Inbound_Tourism_Acquisition_OS

./: .gitignore  AGENTS.md  CLAUDE.md  PRD_商业化版_V2.0.md  README.md
inbound-ai/: .env.example  Dockerfile  README.md  pyproject.toml
inbound-ai/app/: __init__.py  config.py  db.py  deps.py  main.py
inbound-ai/app/models/: breakdown.py  common.py  content.py  diagnostic.py  embed.py  followup.py  keywords.py  landing.py  llm.py
inbound-ai/app/repositories/: __init__.py  knowledge_repository.py
inbound-ai/app/routers/: breakdown.py  content.py  diagnose.py  embed.py  followup.py  health.py  keywords.py  landing.py  llm.py
inbound-ai/app/services/: breakdown_service.py  chunk_service.py  citation_parser.py  content_service.py  diagnose_service.py  document_parser.py  embed_service.py  embedding_service.py  file_storage.py  followup_service.py  keywords_service.py  landing_service.py  llm_gateway.py  llm_provider.py  rag_service.py  reranker_service.py  scorer.py  template_service.py
inbound-ai/tests/: conftest.py  test_breakdown.py  test_chunk_service.py  test_citation_parser_gemini.py  test_citation_parser_perplexity.py  test_content_generate.py  test_diagnose_grounded.py  test_document_parser.py  test_embed_docling_pipeline.py  test_embed_pipeline.py  test_embed_worker.py  test_embedding_service.py  test_file_storage.py  test_followup.py  test_health.py  test_keywords_generate.py  test_keywords_score.py  test_landing_generate.py  test_llm_gateway.py  test_llm_provider_routing.py  test_rag_service.py  test_reranker_service.py  test_scorer_weights.py
(+694 files in other folders)
